k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    app.kubernetes.io/name: platform
    app.kubernetes.io/part-of: esocs-digital-platform
